--- a/public/book.html
+++ b/public/book.html
@@ -289,12 +289,8 @@
         let canEditBook = false;
         let bookIsPublic = false;
         let imagesGenerated = false;
-        const normalizeRole = (role) => typeof role === 'string' ? role.trim().toLowerCase() : '';
-        const hasTeacherRole = (role) => {
-            const normalized = normalizeRole(role);
-            return normalized === 'teacher' || normalized === 'superteacher';
-        };
-        const isSuperTeacher = (role) => normalizeRole(role) === 'superteacher';
+        const hasTeacherRole = (role) => role === 'teacher' || role === 'superTeacher';
+        const isSuperTeacher = (role) => role === 'superTeacher';
         // 로그인한 사용자 이름을 저장하고 책의 저자 영역을 동기화합니다.
         window.authorName = '';
         window.syncBookAuthor = function() {
@@ -626,7 +622,7 @@
             const teacherRequestBtn = document.getElementById('book-teacher-request-btn');
             if (hasTeacherRole(data.role)) {
                 roleBadgeEl.classList.remove('hidden');
-                roleBadgeEl.textContent = isSuperTeacher(data.role) ? '슈퍼 관리자' : '교사';
+                roleBadgeEl.textContent = data.role === 'superTeacher' ? '슈퍼 관리자' : '교사';
                 myClassBtn.classList.remove('hidden');
                 tokenGiveBtn.classList.remove('hidden');
             } else {
@@ -2178,5 +2174,4 @@
     </script>
 </body>
 </html>
-
 
